--- a/about.html
+++ b/about.html
@@ -53,20 +53,20 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/blackbackground.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>About Me</h1>
-            <span class="subheading">This is what I do.</span>
+            <span class="subheading">Hi, my name is Chloe Jung.</span>
           </div>
         </div>
       </div>
     </div>
   </header>
-
+  <img src='img/profilepic.jpg' alt="Avatar" style="width:200px">
   <!-- Main Content -->
   <div class="container">
     <div class="row">
