added profile pic'

--- a/about.html
+++ b/about.html
@@ -67,7 +67,9 @@
     </div>
   </header>
  <h2>HTML Image</h2>
-<img src="img/profilepic.jpg" alt="Chloe Jung" width="500" height="600">
+          <a href="#">
+            <img class="img-fluid" src="img/profilepic.jpg" alt="">
+          </a>
   <!-- Main Content -->
   <div class="container">
     <div class="row">
