initial edit on About section

--- a/about.html
+++ b/about.html
@@ -66,25 +66,27 @@
       </div>
     </div>
   </header>
- <h2>HTML Image</h2>
+ <h2>Summary</h2>
           <a href="#">
-            <img class="img-fluid" src="img/profilepic.jpg" alt="">
+            <img class="img-fluid" src="img/profilepic.JPG" alt="">
           </a>
   <!-- Main Content -->
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <p>Data Analyst with background utilizing Python, R, Matlab, SQL, Tableau for the entire data analysis workflow including data wrangling, data storytelling, data visualization, exploratory data analysis, and applying machine learning models to big data. Currently seeking Data Analyst opportunities.</p>
-        <p>Skills</p>
-        <p>Experience</p>
-<ul>
-  <li>Languages</li>
-  <li>Data Visualization</li>
-  <li>Machine Learning</li>
-</ul>  
-
+        
+ <h3>Skills</h3>
+	 <ul>
+  		<li>Languages: Python (Pandas, NumPy, Scikit-Learn), SQL, R, MATLAB, Stata, SPSS, SAS</li>
+  		<li>Data Visualization: MatplotLib, Seaborn, Plotly, Tableau, Google Analytics</li>
+  		<li>Machine Learning: Hypothesis Testing, A/B Testing, Linear Regression, Logistic Regression, Classification, kNN, Random Forest, Naïve Bayes, K-Means Clustering, Natural Language Processing, Tensorflow</li>
+	 </ul>  
+ 
         <p>Education</p>
+
         <p>Experience</p>
+
       </div>
     </div>
   </div>
