--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
   </header>
  <h2>Summary</h2>
           <a href="#">
-            <img class="img-fluid" src="img/profilepic.JPG" alt="">
+            <img class="img-fluid" src="img/profilepic.JPG" alt="" style="width:500px;height:600px;">
           </a>
   <!-- Main Content -->
   <div class="container">
@@ -82,9 +82,9 @@
   		<li>Data Visualization: MatplotLib, Seaborn, Plotly, Tableau, Google Analytics</li>
   		<li>Machine Learning: Hypothesis Testing, A/B Testing, Linear Regression, Logistic Regression, Classification, kNN, Random Forest, Naïve Bayes, K-Means Clustering, Natural Language Processing, Tensorflow</li>
 	 </ul>  
- 
+ <h4>Education</h4>
         <p>Education</p>
-
+ <h5>Experience</h5>
         <p>Experience</p>
 
       </div>
