--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
       <div class="col-lg-8 col-md-10 mx-auto">
  <h2>Summary</h2>
         <a href="#">
-         <img class="img-fluid" src="img/profilepic.JPG" alt="" style="width:500px;height:500px;">
+         <img class="img-fluid" src="img/profpic_bw.JPG" alt="" style="width:300px;height:300px;">
          </a>
         <p>Data Analyst with background utilizing Python, R, Matlab, SQL, Tableau for the entire data analysis workflow including data wrangling, data storytelling, data visualization, exploratory data analysis, and applying machine learning models to big data. Currently seeking Data Analyst opportunities.</p>
         
@@ -83,6 +83,17 @@
   		<li>Data Visualization: MatplotLib, Seaborn, Plotly, Tableau, Google Analytics</li>
   		<li>Machine Learning: Hypothesis Testing, A/B Testing, Linear Regression, Logistic Regression, Classification, kNN, Random Forest, Naïve Bayes, K-Means Clustering, Natural Language Processing, Tensorflow</li>
 	 </ul>  
+
+								<div class="talent">
+									<h2>Skills</h2>
+									<p> here are my skills	</p>
+								</div>
+
+								<div class="talent">
+									<h2>Education</h2>
+									<p> here are my education </p>
+								</div>
+
  <h4>Education</h4>
         <p>Education</p>
  <h5>Experience</h5>
