--- a/about.html
+++ b/about.html
@@ -82,23 +82,25 @@
   		<li>Languages: Python (Pandas, NumPy, Scikit-Learn), SQL, R, MATLAB, Stata, SPSS, SAS</li>
   		<li>Data Visualization: MatplotLib, Seaborn, Plotly, Tableau, Google Analytics</li>
   		<li>Machine Learning: Hypothesis Testing, A/B Testing, Linear Regression, Logistic Regression, Classification, kNN, Random Forest, Naïve Bayes, K-Means Clustering, Natural Language Processing, Tensorflow</li>
-	 </ul>  
-
-								<div class="talent">
-									<h2>Skills</h2>
-									<p> here are my skills	</p>
-								</div>
-
-								<div class="talent">
-									<h2>Education</h2>
-									<p> here are my education </p>
-								</div>
-
+	 </ul>  				
  <h4>Education</h4>
-        <p>Education</p>
+        <p>Springboard Data Science Certification Program</p>
+	<p>Columbia</p>
+        <p>Columbia</p>
  <h5>Experience</h5>
         <p>Experience</p>
-
+	<div class="section">
+		<h2>Work Experience</h2>
+		<div class="content">
+			<span class="date">Start &raquo; End Year</span>
+			<h3>Job Title One</h3>
+			<address>Company Name, Address, City Province</address>
+			<ul>
+				<li>Bullet one Bullet one</li>
+				<li>Bullet two Bullet two</li>
+				<li>Bullet three Bullet three</li>
+				<li>Bullet four Bullet four</li>
+			</ul>
       </div>
     </div>
   </div>
