--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
       <div class="col-lg-8 col-md-10 mx-auto">
  <h2>Summary</h2>
         <a href="#">
-         <img class="img-fluid" src="img/profpic_bw.JPG" alt="" style="width:300px;height:300px;">
+         <img class="img-fluid" src="img/profpic_bw.JPEG" alt="" style="width:300px;height:300px;">
          </a>
         <p>Data Analyst with background utilizing Python, R, Matlab, SQL, Tableau for the entire data analysis workflow including data wrangling, data storytelling, data visualization, exploratory data analysis, and applying machine learning models to big data. Currently seeking Data Analyst opportunities.</p>
         
@@ -106,6 +106,44 @@
   </div>
 
   <hr>
+
+
+
+<html>
+ <head>
+    <style>
+    {
+        box-sizing: border-box;
+    }
+    /* Set additional styling options for the columns*/
+    .column {
+    float: left;
+    width: 50%;
+    }
+
+    .row:after {
+    content: "";
+    display: table;
+    clear: both;
+    }
+    </style>
+ </head>
+ <body>
+    <div class="row">
+        <div class="column" style="background-color:#FFB695;">
+            <h2>Column 1</h2>
+            <p>Data..</p>
+        </div>
+        <div class="column" style="background-color:#96D1CD;">
+            <h2>Column 2</h2>
+            <p>Data..</p>
+        </div>
+    </div>
+ </body>
+</html>
+
+
+
 
   <!-- Footer -->
   <footer>
