--- a/about.html
+++ b/about.html
@@ -73,9 +73,9 @@
       <div class="col-lg-8 col-md-10 mx-auto">
  <h2>Summary</h2>
         <a href="#">
-         <img class="img-fluid" src="img/profpic_bw.JPEG" alt="" style="width:300px;height:300px;">
+         <img class="img-fluid" src="img/profpic_bw.jpeg" alt="" style="width:300px;height:300px;">
          </a>
-        <p>Data Analyst with background utilizing Python, R, Matlab, SQL, Tableau for the entire data analysis workflow including data wrangling, data storytelling, data visualization, exploratory data analysis, and applying machine learning models to big data. Currently seeking Data Analyst opportunities.</p>
+        <p> Aspiring Data Scientist with background utilizing Python, R, Matlab, SQL, Tableau for the entire data analysis workflow including data wrangling, data storytelling, data visualization, exploratory data analysis, and applying machine learning models to big data. Currently seeking Data Analyst / Data Scientist opportunities.</p>
         
  <h3>Skills</h3>
 	 <ul>
@@ -83,64 +83,32 @@
   		<li>Data Visualization: MatplotLib, Seaborn, Plotly, Tableau, Google Analytics</li>
   		<li>Machine Learning: Hypothesis Testing, A/B Testing, Linear Regression, Logistic Regression, Classification, kNN, Random Forest, Naïve Bayes, K-Means Clustering, Natural Language Processing, Tensorflow</li>
 	 </ul>  				
+ 
  <h4>Education</h4>
         <p>Springboard Data Science Certification Program</p>
-	<p>Columbia</p>
-        <p>Columbia</p>
+	<p>Master of Science in Learning Analytics, Columbia University</p>
+        <p>Master of Science in Neuroscience and Education, Columbai University</p>
+        <p>Bachelor of Arts in Economics | Neuroscience, Columbia College, Columbai University</p>
+ 
  <h5>Experience</h5>
-        <p>Experience</p>
-	<div class="section">
-		<h2>Work Experience</h2>
-		<div class="content">
-			<span class="date">Start &raquo; End Year</span>
-			<h3>Job Title One</h3>
-			<address>Company Name, Address, City Province</address>
-			<ul>
-				<li>Bullet one Bullet one</li>
-				<li>Bullet two Bullet two</li>
-				<li>Bullet three Bullet three</li>
-				<li>Bullet four Bullet four</li>
-			</ul>
+        <p></p>
+	<b>Research Staff Assistant</b>
+	 <address>Zuckerman Institute, Columbia University, New York, NY</address>
+	  <ul>
+	   <li>Worked with participants to collect and analyze fMRI data using MATLAB to examine the neural substrates of reinforcement learning based on Markov Decision Process</li>
+	  </ul>
+        <p></p>
+	<b>Data Scientist Inter</b>
+	 <address>Teachley, New York, NY</address>
+	  <ul>
+	   <li>Worked with an EdTech startup to analyze individual-level data in K-5 students pertaining to their performance within its primary mobile mathematical game, Market Bay.</li>
+ 	   <li>Cleaned raw data and analyzed different learning patterns among students, such as those that finished the game versus students who quit in the middle, using R and Tableau.</li>
+	  </ul>
       </div>
     </div>
   </div>
 
   <hr>
-
-
-
-<html>
- <head>
-    <style>
-    {
-        box-sizing: border-box;
-    }
-    /* Set additional styling options for the columns*/
-    .column {
-    float: left;
-    width: 50%;
-    }
-
-    .row:after {
-    content: "";
-    display: table;
-    clear: both;
-    }
-    </style>
- </head>
- <body>
-    <div class="row">
-        <div class="column" style="background-color:#FFB695;">
-            <h2>Column 1</h2>
-            <p>Data..</p>
-        </div>
-        <div class="column" style="background-color:#96D1CD;">
-            <h2>Column 2</h2>
-            <p>Data..</p>
-        </div>
-    </div>
- </body>
-</html>
 
 
 
