--- a/about.html
+++ b/about.html
@@ -73,24 +73,24 @@
       <div class="col-lg-8 col-md-10 mx-auto">
  <h2>Summary</h2>
         <a href="#">
-         <img class="img-fluid" src="img/profpic_bw.jpeg" alt="" style="width:300px;height:300px;">
+         <center><img class="img-fluid" src="img/profpic_bw.jpeg" alt="" style="width:300px;height:300px;">
          </a>
         <p> Aspiring Data Scientist with background utilizing Python, R, Matlab, SQL, Tableau for the entire data analysis workflow including data wrangling, data storytelling, data visualization, exploratory data analysis, and applying machine learning models to big data. Currently seeking Data Analyst / Data Scientist opportunities.</p>
-        
- <h3>Skills</h3>
+        <hr>
+ <h2>Skills</h2>
 	 <ul>
   		<li>Languages: Python (Pandas, NumPy, Scikit-Learn), SQL, R, MATLAB, Stata, SPSS, SAS</li>
   		<li>Data Visualization: MatplotLib, Seaborn, Plotly, Tableau, Google Analytics</li>
   		<li>Machine Learning: Hypothesis Testing, A/B Testing, Linear Regression, Logistic Regression, Classification, kNN, Random Forest, Naïve Bayes, K-Means Clustering, Natural Language Processing, Tensorflow</li>
 	 </ul>  				
- 
- <h4>Education</h4>
-        <p>Springboard Data Science Certification Program</p>
-	<p>Master of Science in Learning Analytics, Columbia University</p>
-        <p>Master of Science in Neuroscience and Education, Columbai University</p>
-        <p>Bachelor of Arts in Economics | Neuroscience, Columbia College, Columbai University</p>
- 
- <h5>Experience</h5>
+ 	 <hr>
+ <h2>Education</h2>
+        <p>Springboard Data Science Certification Program
+	Master of Science in Learning Analytics, Columbia University
+        Master of Science in Neuroscience and Education, Columbai University
+        Bachelor of Arts in Economics | Neuroscience, Columbia College, Columbai University</p>
+ 	<hr>
+ <h2>Experience</h2>
         <p></p>
 	<b>Research Staff Assistant</b>
 	 <address>Zuckerman Institute, Columbia University, New York, NY</address>
