--- a/about.html
+++ b/about.html
@@ -73,22 +73,22 @@
       <div class="col-lg-8 col-md-10 mx-auto">
  <h2>Summary</h2>
         <a href="#">
-         <center><img class="img-fluid" src="img/profpic_bw.jpeg" alt="" style="width:300px;height:300px;">
+         <img class="center" src="img/profpic_bw.jpeg" alt="" style="width:300px;height:300px;">
          </a>
         <p> Aspiring Data Scientist with background utilizing Python, R, Matlab, SQL, Tableau for the entire data analysis workflow including data wrangling, data storytelling, data visualization, exploratory data analysis, and applying machine learning models to big data. Currently seeking Data Analyst / Data Scientist opportunities.</p>
         <hr>
  <h2>Skills</h2>
 	 <ul>
-  		<li>Languages: Python (Pandas, NumPy, Scikit-Learn), SQL, R, MATLAB, Stata, SPSS, SAS</li>
-  		<li>Data Visualization: MatplotLib, Seaborn, Plotly, Tableau, Google Analytics</li>
-  		<li>Machine Learning: Hypothesis Testing, A/B Testing, Linear Regression, Logistic Regression, Classification, kNN, Random Forest, Naïve Bayes, K-Means Clustering, Natural Language Processing, Tensorflow</li>
+  		<li><strong>Languages</strong>: Python (Pandas, NumPy, Scikit-Learn), SQL, R, MATLAB, Stata, SPSS, SAS</li>
+  		<li><strong>Data Visualization</strong>: MatplotLib, Seaborn, Plotly, Tableau, Google Analytics</li>
+  		<li><strong>Machine Learning</strong>: Hypothesis Testing, A/B Testing, Linear Regression, Logistic Regression, Classification, kNN, Random Forest, Naïve Bayes, K-Means Clustering, Natural Language Processing, Tensorflow</li>
 	 </ul>  				
  	 <hr>
  <h2>Education</h2>
-        <p>Springboard Data Science Certification Program
-	Master of Science in Learning Analytics, Columbia University
-        Master of Science in Neuroscience and Education, Columbai University
-        Bachelor of Arts in Economics | Neuroscience, Columbia College, Columbai University</p>
+        <p>Springboard Data Science Certification Program <i>February 2021<i/>
+	<br>Master of Science in Learning Analytics, Columbia University <i>February 2021<i/>
+        <br>Master of Science in Neuroscience and Education, Columbai University <i>February 2019<i/>
+        <br>Bachelor of Arts in Economics | Neuroscience, Columbia College, Columbai University <i>May 2017<i/> </p>
  	<hr>
  <h2>Experience</h2>
         <p></p>
@@ -98,11 +98,25 @@
 	   <li>Worked with participants to collect and analyze fMRI data using MATLAB to examine the neural substrates of reinforcement learning based on Markov Decision Process</li>
 	  </ul>
         <p></p>
-	<b>Data Scientist Inter</b>
+	<b>Data Scientist Intern</b>
 	 <address>Teachley, New York, NY</address>
 	  <ul>
 	   <li>Worked with an EdTech startup to analyze individual-level data in K-5 students pertaining to their performance within its primary mobile mathematical game, Market Bay.</li>
  	   <li>Cleaned raw data and analyzed different learning patterns among students, such as those that finished the game versus students who quit in the middle, using R and Tableau.</li>
+	  </ul>
+        <p></p>
+	<b>Research Assistant</b>
+	 <address>New York Psychiatric Institute, New York, NY</address>
+	  <ul>
+	   <li>Employed a novel measure of anticipatory reward processing (Monetary Incentive Delay Task) in rodents and collected and analyzed their neural and behavioral data using Neuralynx and MATLAB.</li>
+ 	   <li>Independently designed and surgically implanted a micro-drive on electronic interface board (EIB) in rodents to target brain regions related to reward processing.</li>
+	  </ul>
+        <p></p>
+	<b>Graduate Assistant</b>
+	 <address>New York Psychiatric Institute, New York, NY</address>
+	  <ul>
+	   <li>Collected EEG data using NetStation to examine the neural signals related to early visual processing in children with dyslexia.</li>
+ 	   <li>Pre and post-processed raw EEG data and visualized waveforms and analyzed EEG data using SPSS and R.</li>
 	  </ul>
       </div>
     </div>
