--- a/about.html
+++ b/about.html
@@ -85,10 +85,10 @@
 	 </ul>  				
  	 <hr>
  <h2>Education</h2>
-        <p>Springboard Data Science Certification Program <i>February 2021<i/>
-	<br>Master of Science in Learning Analytics, Columbia University <i>February 2021<i/>
-        <br>Master of Science in Neuroscience and Education, Columbai University <i>February 2019<i/>
-        <br>Bachelor of Arts in Economics | Neuroscience, Columbia College, Columbai University <i>May 2017<i/> </p>
+        <p>Springboard Data Science Certification Program <i>February 2021<i/><br/>
+	<br>M.S. in Learning Analytics, Columbia University <i>February 2021<i/><br/>
+        <br>M.S. in Neuroscience and Education, Columbai University <i>February 2019<i/><br/>
+        <br>B.A. in Economics | Neuroscience, Columbia College, Columbai University <i>May 2017<i/><br/></p>
  	<hr>
  <h2>Experience</h2>
         <p></p>
