--- a/about.html
+++ b/about.html
@@ -85,21 +85,23 @@
 	 </ul>  				
  	 <hr>
  <h2>Education</h2>
-        <p>Springboard Data Science Certification Program <i>February 2021<i/><br/>
-	<br>M.S. in Learning Analytics, Columbia University <i>February 2021<i/><br/>
-        <br>M.S. in Neuroscience and Education, Columbai University <i>February 2019<i/><br/>
-        <br>B.A. in Economics | Neuroscience, Columbia College, Columbai University <i>May 2017<i/><br/></p>
+        <p>Springboard Data Science Certification Program <i>February 2021</i>
+	<br>M.S. in Learning Analytics, Columbia University <i>February 2021</i>
+        <br>M.S. in Neuroscience and Education, Columbai University <i>February 2019</i>
+        <br>B.A. in Economics | Neuroscience, Columbia College, Columbai University <i>May 2017</i></p>
  	<hr>
  <h2>Experience</h2>
         <p></p>
 	<b>Research Staff Assistant</b>
 	 <address>Zuckerman Institute, Columbia University, New York, NY</address>
+          <i>November 2018 – Present</i>
 	  <ul>
 	   <li>Worked with participants to collect and analyze fMRI data using MATLAB to examine the neural substrates of reinforcement learning based on Markov Decision Process</li>
 	  </ul>
         <p></p>
 	<b>Data Scientist Intern</b>
 	 <address>Teachley, New York, NY</address>
+          <i>May 2020 – August 2020</i>
 	  <ul>
 	   <li>Worked with an EdTech startup to analyze individual-level data in K-5 students pertaining to their performance within its primary mobile mathematical game, Market Bay.</li>
  	   <li>Cleaned raw data and analyzed different learning patterns among students, such as those that finished the game versus students who quit in the middle, using R and Tableau.</li>
@@ -107,6 +109,7 @@
         <p></p>
 	<b>Research Assistant</b>
 	 <address>New York Psychiatric Institute, New York, NY</address>
+          <i>January 2019 – August 2019</i>
 	  <ul>
 	   <li>Employed a novel measure of anticipatory reward processing (Monetary Incentive Delay Task) in rodents and collected and analyzed their neural and behavioral data using Neuralynx and MATLAB.</li>
  	   <li>Independently designed and surgically implanted a micro-drive on electronic interface board (EIB) in rodents to target brain regions related to reward processing.</li>
@@ -114,6 +117,7 @@
         <p></p>
 	<b>Graduate Assistant</b>
 	 <address>New York Psychiatric Institute, New York, NY</address>
+          <i>October 2017 – December 2018</i>
 	  <ul>
 	   <li>Collected EEG data using NetStation to examine the neural signals related to early visual processing in children with dyslexia.</li>
  	   <li>Pre and post-processed raw EEG data and visualized waveforms and analyzed EEG data using SPSS and R.</li>
