--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
       <div class="col-lg-8 col-md-10 mx-auto">
  <h2>Summary</h2>
         <a href="#">
-         <img class="center" src="img/profpic_bw.jpeg" alt="" style="width:300px;height:300px;">
+         <center><img class="center" src="img/profpic_bw.jpeg" alt="" style="width:300px;height:300px;"></center>
          </a>
         <p> Aspiring Data Scientist with background utilizing Python, R, Matlab, SQL, Tableau for the entire data analysis workflow including data wrangling, data storytelling, data visualization, exploratory data analysis, and applying machine learning models to big data. Currently seeking Data Analyst / Data Scientist opportunities.</p>
         <hr>
