--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>About Me</h1>
-            <span class="subheading">Hi, my name is Chloe Jung.</span>
+            <span class="subheading">Chloe S. Jung</span>
           </div>
         </div>
       </div>
@@ -71,7 +71,6 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
- <h2>Summary</h2>
         <a href="#">
          <center><img class="center" src="img/profpic_bw.jpeg" alt="" style="width:300px;height:300px;"></center>
          </a>
