--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
 
 <body>
 
+
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
@@ -40,9 +41,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
-          </li>
+          </li>     
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <a class="nav-link" href="post.html">Data Science</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -92,14 +93,14 @@
  <h2>Experience</h2>
         <p></p>
 	<b>Research Staff Assistant</b>
-	 <address>Zuckerman Institute, Columbia University, New York, NY</address>
+	  <br>Zuckerman Institute, Columbia University, New York, NY</br>
           <i>November 2018 – Present</i>
-	  <ul>
-	   <li>Worked with participants to collect and analyze fMRI data using MATLAB to examine the neural substrates of reinforcement learning based on Markov Decision Process</li>
-	  </ul>
+	 <ul>
+	  <li>Worked with participants to collect and analyze fMRI data using MATLAB to examine the neural substrates of reinforcement learning based on Markov Decision Process.</li>
+	 </ul>
         <p></p>
 	<b>Data Scientist Intern</b>
-	 <address>Teachley, New York, NY</address>
+	 <br>Teachley, New York, NY</br>
           <i>May 2020 – August 2020</i>
 	  <ul>
 	   <li>Worked with an EdTech startup to analyze individual-level data in K-5 students pertaining to their performance within its primary mobile mathematical game, Market Bay.</li>
@@ -107,7 +108,7 @@
 	  </ul>
         <p></p>
 	<b>Research Assistant</b>
-	 <address>New York Psychiatric Institute, New York, NY</address>
+	 <br>New York Psychiatric Institute, New York, NY</br>
           <i>January 2019 – August 2019</i>
 	  <ul>
 	   <li>Employed a novel measure of anticipatory reward processing (Monetary Incentive Delay Task) in rodents and collected and analyzed their neural and behavioral data using Neuralynx and MATLAB.</li>
@@ -115,7 +116,7 @@
 	  </ul>
         <p></p>
 	<b>Graduate Assistant</b>
-	 <address>New York Psychiatric Institute, New York, NY</address>
+	 <br>New York Psychiatric Institute, New York, NY</br>
           <i>October 2017 – December 2018</i>
 	  <ul>
 	   <li>Collected EEG data using NetStation to examine the neural signals related to early visual processing in children with dyslexia.</li>
@@ -129,7 +130,6 @@
 
 
 
-
   <!-- Footer -->
   <footer>
     <div class="container">
@@ -137,31 +137,23 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/chloesjung">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-github fa-stack-1x fa-inverse"></i> 
                 </span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/chloesjung/">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i> 
                 </span>
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">Copyright &copy; Chloe Jung 2021</p>
         </div>
       </div>
     </div>
