--- a/about.html
+++ b/about.html
@@ -25,7 +25,6 @@
 
 <body>
 
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
@@ -41,9 +40,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
-          </li>     
+          </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Data Science</a>
+            <a class="nav-link" href="courses.html">DS Courses</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">DS Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -52,6 +54,7 @@
       </div>
     </div>
   </nav>
+
 
   <!-- Page Header -->
   <header class="masthead" style="background-image: url('img/blackbackground.jpg')">
@@ -82,7 +85,7 @@
   		<li><strong>Languages</strong>: Python (Pandas, NumPy, Scikit-Learn), SQL, R, MATLAB, Stata, SPSS, SAS</li>
   		<li><strong>Data Visualization</strong>: MatplotLib, Seaborn, Plotly, Tableau, Google Analytics</li>
   		<li><strong>Machine Learning</strong>: Hypothesis Testing, A/B Testing, Linear Regression, Logistic Regression, Classification, kNN, Random Forest, Naïve Bayes, K-Means Clustering, Natural Language Processing, Tensorflow</li>
-	 </ul>  				
+	 </ul>
  	 <hr>
  <h2>Education</h2>
         <p>Springboard Data Science Certification Program <i>February 2021</i>
@@ -140,7 +143,7 @@
               <a href="https://github.com/chloesjung">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i> 
+                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
@@ -148,7 +151,7 @@
               <a href="https://www.linkedin.com/in/chloesjung/">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i> 
+                  <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
