--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
 
 <body>
 
+
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
@@ -40,9 +41,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
-          </li>     
+          </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Data Science</a>
+            <a class="nav-link" href="courses.html">DS Courses</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">DS Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -51,6 +55,7 @@
       </div>
     </div>
   </nav>
+
 
   <!-- Page Header -->
   <header class="masthead" style="background-image: url('img/blackbackground.jpg')">
@@ -123,7 +128,7 @@
               <a href="https://github.com/chloesjung">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i> 
+                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
@@ -131,7 +136,7 @@
               <a href="https://www.linkedin.com/in/chloesjung/">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i> 
+                  <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
