added some links to example case studies

--- a/courses.html
+++ b/courses.html
@@ -91,9 +91,10 @@
   		<ol type="i">
 			<li>Models and Algorithms</li>
 			<li>Assessing Uncertainty through Resampling</li>
-			<li>Probability Theory</li>
-			<li>Hypothesis Testing</li>
-			<li>Advanced statistics: Bayesian Inference</li>
+			<li>Probability Theory: <a href="https://github.com/chloesjung/Frequentist-Inference-Case-Study/blob/master/Frequentist%20Inference%20Case%20Study%20-%20Part%20A%20_JUNG.ipynb"><i>Frequentist Inference Case Study Part 1,</i></a> <a href="https://github.com/chloesjung/Frequentist-Inference-Case-Study/blob/master/Frequentist%20Inference%20Case%20Study%20-%20Part%20B%20_JUNG.ipynb"><i>Part 2</i></a></li>
+			<li>Hypothesis Testing: <a href="https://github.com/chloesjung/Integrating-Apps-Case-Study/blob/master/Integrating%20Apps%20project%20-%20Tier%203%20-%20Complete_JUNG.ipynb"><i>Hypothesis Testing Case Study</i></a></li>
+			<li>Statistical Modeling: <a href="https://github.com/chloesjung/Linear-Regression-Case-Study/blob/master/Linear%20Regression%20Case%20Study%20-%20the%20Red%20Wine%20Dataset%20-%20Tier%203_JUNG.ipynb"><i>Linear Regression Case Study 1</i></a></li>
+      <li>Advanced statistics: Bayesian Inference</li>
 	        </ol>
   		<li><strong>Machine Learning</strong></li>
   		<ul>
@@ -119,7 +120,7 @@
 	         </ul>
   		<li><strong>Feature Engineering</strong></li>
   		 <ol type="i">
-			<li>Categorica, Text and Image Features</li>
+			<li>Categorical, Text and Image Features</li>
 			<li>Feature Engineering Implementation</li>
 	        </ol>
   		<li><strong>Machine Learning Application</strong></li>
