--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
         <a href="#">
          <center><img class="center" src="img/profpic_bw.jpeg" alt="" style="width:300px;height:300px;"></center>
          </a>
-        <p> Aspiring Data Scientist with background utilizing Python, R, Matlab, SQL, Tableau for the entire data analysis workflow including data wrangling, data storytelling, data visualization, exploratory data analysis, and applying machine learning models to big data. Currently seeking Data Analyst / Data Scientist opportunities.</p>
+        <p> Aspiring Data Scientist with background utilizing Python, R, Matlab, SQL, and Tableau for the entire data analysis workflow including data wrangling, data storytelling, data visualization, exploratory data analysis, and applying machine learning models to big data. Currently seeking Data Analyst | Data Scientist opportunities.</p>
         <hr>
  <h2>Skills</h2>
 	 <ul>
@@ -92,7 +92,7 @@
  	 <hr>
  <h2>Education</h2>
         <p>Springboard Data Science Certification Program <i>February 2021</i>
-	<br>M.S. in Learning Analytics, Columbia University <i>February 2021</i>
+	      <br>M.S. in Learning Analytics, Columbia University <i>February 2021</i>
         <br>M.S. in Neuroscience and Education, Columbai University <i>February 2019</i>
         <br>B.A. in Economics | Neuroscience, Columbia College, Columbai University <i>May 2017</i></p>
  	<hr>
